First try of cert-manager, external-dns

--- a/flux/k3s/apps/hello-world/hello-world.yml
+++ b/flux/k3s/apps/hello-world/hello-world.yml
@@ -37,3 +37,23 @@ spec:
       port: 8080
       targetPort: 80
   type: NodePort
+---
+apiVersion: gateway.networking.k8s.io/v1
+kind: HTTPRoute
+metadata:
+  name: hello-world
+  namespace: hello-world
+spec:
+  parentRefs:
+  - name: lab-gateway
+    namespace: nginx-gateway
+  hostnames:
+  - "hello.lab.lkwt.dev"
+  rules:
+  - matches:
+    - path:
+        type: PathPrefix
+        value: /
+    backendRefs:
+    - name: hello-app
+      port: 80
