--- a/flux/k3s/infra/nginx-gateway/helmrelease.yaml
+++ b/flux/k3s/infra/nginx-gateway/helmrelease.yaml
@@ -8,7 +8,7 @@ spec:
   chart:
     spec:
       chart: nginx-gateway-fabric
-      version: >=1.0.0
+      version: 2.1.0
       sourceRef:
         kind: HelmRepository
         name: nginx-stable
