Fix cert secret name

--- a/flux/k3s/infra/nginx-gateway/gateway.yaml
+++ b/flux/k3s/infra/nginx-gateway/gateway.yaml
@@ -13,4 +13,4 @@ spec:
       mode: Terminate
       certificateRefs:
       - kind: Secret
-        name: wildcard-lab-lkwt-dev
+        name: wildcard-lab-lkwt-dev-tls
