--- a/flux/k3s/infra/flux-system/gotk-sync.yaml
+++ b/flux/k3s/infra/flux-system/gotk-sync.yaml
@@ -20,7 +20,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 10m0s
-  path: ./flux/k3s
+  path: ./flux/k3s/infra/flux-system
   prune: true
   sourceRef:
     kind: GitRepository
