--- a/flux/clusters/home1/apps.yaml
+++ b/flux/clusters/home1/apps.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 10m
-  path: ./flux/k3s/apps
+  path: ./flux/apps/home1
   prune: true
   sourceRef:
     kind: GitRepository
