--- a/flux/infra/configs/cert-manager.yaml
+++ b/flux/infra/configs/cert-manager.yaml
@@ -15,4 +15,17 @@ spec:
             apiTokenSecretRef:
               name: cloudflare-api-token-secret
               key: api-token
+---
+apiVersion: cert-manager.io/v1
+kind: Certificate
+metadata:
+  name: wildcard-lab-lkwt-dev
+  namespace: cert-manager
+spec:
+  secretName: wildcard-lab-lkwt-dev-tls
+  dnsNames:
+    - '*.lab.lkwt.dev'
+  issuerRef:
+    name: letsencrypt-wildcard
+    kind: ClusterIssuer
 
