--- a/flux/clusters/home1/infra.yaml
+++ b/flux/clusters/home1/infra.yaml
@@ -1,11 +1,11 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: infra-helm-repos
+  name: infra-prereqs
   namespace: flux-system
 spec:
   interval: 10m
-  path: ./flux/infra
+  path: ./flux/infra/prereqs
   prune: true
   sourceRef:
     kind: GitRepository
@@ -25,7 +25,7 @@ spec:
     kind: GitRepository
     name: flux-system
   dependsOn:
-    - name: infra-helm-repos
+    - name: infra-prereqs
 
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
