--- a/flux/infra/controllers/nginx-gateway.yaml
+++ b/flux/infra/controllers/nginx-gateway.yaml
@@ -1,20 +1,17 @@
 apiVersion: helm.toolkit.fluxcd.io/v2
 kind: HelmRelease
 metadata:
-  name: nginx-gateway
+  name: nginx-gateway-fabric
   namespace: nginx-gateway
 spec:
   interval: 10m
   chart:
     spec:
       chart: nginx-gateway-fabric
-      version: 2.1.0
+      version: "1.2.0"
       sourceRef:
         kind: HelmRepository
-        name: nginx-stable
-        namespace: flux-system
-  install:
-    createNamespace: true
+        name: nginx-gateway-fabric
   values:
     service:
       type: NodePort
