--- a/flux/infra/controllers/external-dns.yaml
+++ b/flux/infra/controllers/external-dns.yaml
@@ -55,7 +55,7 @@ spec:
       serviceAccountName: external-dns
       containers:
       - name: external-dns
-        image: k8s.gcr.io/external-dns/external-dns:v0.10.0
+        image: registry.k8s.io/external-dns/external-dns:v0.13.2
         envFrom:
         - secretRef:
             name: pihole-password
