--- a/flux/infra/configs/cert-manager.yaml
+++ b/flux/infra/configs/cert-manager.yaml
@@ -20,7 +20,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: wildcard-lab-lkwt-dev
-  namespace: cert-manager
+  namespace: nginx-gateway
 spec:
   secretName: wildcard-lab-lkwt-dev-tls
   dnsNames:
