--- a/flux/infra/controllers/nginx-gateway.yaml
+++ b/flux/infra/controllers/nginx-gateway.yaml
@@ -15,3 +15,10 @@ spec:
   values:
     service:
       type: LoadBalancer
+      ports:
+        - name: http
+          port: 80
+          targetPort: 80
+        - name: https
+          port: 443
+          targetPort: 443
