--- a/flux/infra/prereqs/crds.yaml
+++ b/flux/infra/prereqs/crds.yaml
@@ -1,3 +1,14 @@
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: GitRepository
+metadata:
+  name: nginx-gateway-fabric
+  namespace: flux-system
+spec:
+  interval: 5m
+  url: https://github.com/nginx/nginx-gateway-fabric
+  ref:
+    tag: v2.1.1
+---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
