--- a/flux/infra/prereqs/metallb.yaml
+++ b/flux/infra/prereqs/metallb.yaml
@@ -1,4 +1,4 @@
-# Install MetalLB
+# Step 1: Install MetalLB system components
 apiVersion: v1
 kind: Namespace
 metadata:
@@ -18,7 +18,7 @@ spec:
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: metallb
+  name: metallb-system
   namespace: flux-system
 spec:
   interval: 10m
@@ -29,22 +29,3 @@ spec:
     name: metallb
   targetNamespace: metallb-system
   wait: true
----
-# Configure IP address pool (adjust to your network)
-apiVersion: metallb.io/v1beta1
-kind: IPAddressPool
-metadata:
-  name: default-pool
-  namespace: metallb-system
-spec:
-  addresses:
-  - 192.168.68.21/32  # Your node's IP address
----
-apiVersion: metallb.io/v1beta1
-kind: L2Advertisement
-metadata:
-  name: default
-  namespace: metallb-system
-spec:
-  ipAddressPools:
-  - default-pool
