--- a/flux/infra/controllers/metallb.yaml
+++ b/flux/infra/controllers/metallb.yaml
@@ -1,17 +1,31 @@
-apiVersion: metallb.io/v1beta1
-kind: IPAddressPool
-metadata:
-  name: default-pool
-  namespace: metallb-system
-spec:
-  addresses:
-  - 192.168.68.21/32
 ---
-apiVersion: metallb.io/v1beta1
-kind: L2Advertisement
+apiVersion: v1
+kind: Namespace
 metadata:
-  name: default
-  namespace: metallb-system
+  name: metallb-system
+---
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: GitRepository
+metadata:
+  name: metallb
+  namespace: flux-system
 spec:
-  ipAddressPools:
-  - default-pool
+  interval: 30m
+  ref:
+    tag: v0.13.12
+  url: https://github.com/metallb/metallb
+---
+apiVersion: kustomize.toolkit.fluxcd.io/v1
+kind: Kustomization
+metadata:
+  name: metallb-system
+  namespace: flux-system
+spec:
+  interval: 10m
+  path: "./config/default"
+  prune: true
+  sourceRef:
+    kind: GitRepository
+    name: metallb
+  targetNamespace: metallb-system
+  wait: true
