--- a/flux/infra/controllers/metallb.yaml
+++ b/flux/infra/controllers/metallb.yaml
@@ -12,7 +12,7 @@ metadata:
 spec:
   interval: 30m
   ref:
-    tag: v0.13.12
+    tag: v0.15.2
   url: https://github.com/metallb/metallb
 ---
 apiVersion: kustomize.toolkit.fluxcd.io/v1
@@ -22,7 +22,7 @@ metadata:
   namespace: flux-system
 spec:
   interval: 10m
-  path: "./config/default"
+  path: "./config/native"
   prune: true
   sourceRef:
     kind: GitRepository
