--- a/flux/infra/prereqs/helm-repositories.yaml
+++ b/flux/infra/prereqs/helm-repositories.yaml
@@ -11,7 +11,7 @@ apiVersion: source.toolkit.fluxcd.io/v1beta2
 kind: HelmRepository
 metadata:
   name: nginx-gateway-fabric
-  namespace: nginx-gateway
+  namespace: flux-system
 spec:
   interval: 5m0s
   type: oci
