--- a/flux/apps/home1/home-assistant.yaml
+++ b/flux/apps/home1/home-assistant.yaml
@@ -58,6 +58,8 @@ spec:
         ports:
         - containerPort: 8123
           name: http
+        - containerPort: 80
+          name: hue-api
         env:
         - name: TZ
           value: "Europe/London"
@@ -112,6 +114,22 @@ spec:
     - protocol: TCP
       port: 8123
       targetPort: 8123
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: home-assistant-hue
+  namespace: home-assistant
+  annotations:
+    metallb.universe.tf/loadBalancerIPs: 192.168.68.22
+spec:
+  selector:
+    app: home-assistant
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
+  type: LoadBalancer
 ---
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
