--- a/flux/infra/configs/gateway.yaml
+++ b/flux/infra/configs/gateway.yaml
@@ -6,6 +6,14 @@ metadata:
 spec:
   gatewayClassName: nginx
   listeners:
+  - name: http
+    protocol: HTTP
+    port: 80
+    allowedRoutes:
+      namespaces:
+        from: All
+      kinds:
+      - kind: HTTPRoute
   - name: https
     protocol: HTTPS
     port: 443
