--- a/flux/infra/controllers/nginx-gateway.yaml
+++ b/flux/infra/controllers/nginx-gateway.yaml
@@ -24,6 +24,10 @@ spec:
   values:
     service:
       ports:
+      - name: http
+        port: 80
+        protocol: TCP
+        targetPort: 80
       - name: https
         port: 443
         protocol: TCP
