Fix HTTPRoute conflict for emulated_hue
- Restrict home-assistant HTTPRoute to HTTPS listener only
- Allows home-assistant-hue HTTPRoute exclusive access to HTTP listener
- Enables proper routing for emulated_hue on port 80

--- a/flux/apps/home1/home-assistant.yaml
+++ b/flux/apps/home1/home-assistant.yaml
@@ -129,6 +129,7 @@ spec:
   parentRefs:
   - name: lab-gateway
     namespace: nginx-gateway
+    sectionName: https
   hostnames:
   - "homeassistant.lab.lkwt.dev"
   rules:
