--- a/flux/apps/home1/home-assistant.yaml
+++ b/flux/apps/home1/home-assistant.yaml
@@ -82,7 +82,7 @@ spec:
             path: /
             port: 8123
           initialDelaySeconds: 60
-          periodmeClaim:Seconds: 30
+          periodSeconds: 30
           timeoutSeconds: 10
         readinessProbe:
           httpGet:
